# AI-FortiDLP

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  main.py
app/agent/: canned_queries.py  claude_client.py  fortidlp_client.py  tools.py
app/web/: app.js  index.html
tests/: test_agent_loop.py  test_canned.py  test_tools.py
